# Slab-Client

./: .gitignore  README.md  README.txt  build.gradle  build.sh  buildAndMine.bat  gradle.properties  options.txt  slab_server.py  usercache.json  usernamecache.json
SlabServer/: CMakeLists.txt  Database.hpp  Manager.cpp  Manager.hpp  Server.cpp  Server.hpp  main.cpp  run.sh
config/: level_head.cfg  splash.properties
crash-reports/: crash-2020-05-05_15.06.21-client.txt  crash-2020-05-05_15.16.55-client.txt  crash-2020-05-05_15.31.50-client.txt  crash-2020-05-06_01.02.13-client.txt  crash-2020-05-06_02.02.50-client.txt  crash-2020-05-06_15.10.55-client.txt  crash-2020-05-06_18.16.28-client.txt  crash-2020-05-06_18.19.11-client.txt  crash-2020-05-06_18.24.24-client.txt  crash-2020-05-06_18.27.47-client.txt  crash-2020-05-06_19.01.53-client.txt  crash-2020-05-06_19.05.24-client.txt  crash-2020-05-06_19.07.50-client.txt  crash-2020-05-06_22.40.28-client.txt  crash-2020-05-07_14.23.41-client.txt
libs/: crash-2018-02-03_23.23.57-client.txt
saves/test/: level.dat_mcr  level.dat_old
saves/test/region/: r.-1.-1.mca  r.-1.0.mca  r.-1.1.mca  r.-1.2.mca  r.0.-1.mca  r.0.0.mca  r.0.1.mca  r.0.2.mca  r.1.1.mca  r.1.2.mca
saves/test/stats/: 005a1bfb-b3e4-37aa-87e8-3ba2c8463cf4.json  02b93f25-6b3e-31ad-b8e5-b502d04aa517.json  02d7ab53-cc43-3dbe-bc5a-8521c04d75bb.json  09667321-9873-3aba-80be-1829d546aeb1.json  0a5e4ff0-6099-36b5-b64d-a84ffa9f1f72.json  0b0a3338-3321-32ee-8738-58aa00379d42.json  0d077092-9045-3af8-b41e-a691f388e76a.json  0dce5a51-e764-3309-b5b1-e5d34e62212f.json  (+108 more)
(+29 files in other folders)
